- JRUBY-2297, 18846: retrying failing SQL statements is harmful when not autocommitting (Craig McMillan)
- 10021: very preliminary sybase support. (Mark Atkinson) Not usable until collision w/ sqlserver driver is resolved.
- JRUBY-2312, JRUBY-2319, JRUBY-2322: Oracle timestamping issues (Jesse Hu & Michael König)
- JRUBY-2422: Fix MySQL referential integrity and rollback issues

== 0.8

- NOTE: This release is only compatible with JRuby 1.1RC3 or later.
- Because of recent API changes in trunk in preparation for JRuby 1.1, this release is not
  backward compatible with previous JRuby releases. Hence the version bump.
- Internal: convert Java methods to be defined with annotations
- Fix problem with reserved words coming back pre-quoted from #indexes in postgres
- JRUBY-2205: Fix N^2 allocation of bytelists for mysql quoting (taw)
- Attempt a fix for Rubyforge 18059
- Upgrade derby to 10.3.2.1
- Fix db:create etc. in the case where JDBC is loaded in Rails' preinitializer.rb
- Fix db:drop to actually work
- Fix for Rubyforge #11567 (Matt Williams)

== 0.7.2

- JRUBY-1905: add_column for derby, hsqldb, and postgresql (Stephen Bannasch)
- Fix db:create for JDBC
- Support Rails 2 with the old "require 'jdbc_adapter'" approach
- JRUBY-1966: Instead of searching for just tables, search for views and tables.
- JRUBY-1583: DB2 numeric quoting (Ryan Shillington)
- JRUBY-1634: Oracle DATE type mapping (Daniel Wintschel)
- JRUBY-1543: rename_column issue with more recent MySQL drivers (Oliver Schmelzle)
- Rubyforge #15074: ConnectionAdapters::JdbcAdapter.indexes is missing name and
  schema_name parameters in the method signature (Igor Minar)
- Rubyforge #13558: definition for the indexes method (T Meyarivan)
- JRUBY-2051: handle schemaname and tablename more correctly for columns
- JRUBY-2102: Postgres Adapter cannot handle datetime type (Rainer Hahnekamp)
- JRUBY-2018: Oracle behind ActiveRecord-JDBC fails with "Invalid column index" (K Venkatasubramaniyan)