@@ -10,6 +10,15 @@ require 'db/mysql'
 
 class MysqlSimpleTest < Test::Unit::TestCase
   include SimpleTestMethods
+
+  def test_string_quoting_oddity
+    s = "0123456789a'a"
+    assert_equal "'0123456789a\\'a'", ActiveRecord::Base.connection.quote(s)
+
+    s2 = s[10,3]
+    assert_equal "a'a", s2
+    assert_equal "'a\\'a'", ActiveRecord::Base.connection.quote(s2)
+  end
 end
 
 class MysqlHasManyThroughTest < Test::Unit::TestCase
